# skripsi

./: .gitignore  HASIL_DAN_PEMBAHASAN_1_12.md  LAPORAN.md  LAPORAN_3_ANALISIS_SPATIOTEMPORAL.md  analysis_utils.py  clear-duplicate-and-save-April-2022.ipynb  clear-duplicate-and-save.ipynb  convert-to-parquet.ipynb  convert_to_parquet.py  convert_to_parquet_2.py  convert_to_parquet_3.py  create-all-data-gps-parquet-time.ipynb  create-all-data-gps-parquet.ipynb  critical-question.txt  csv-anomali-records-pandas.ipynb  data-description-2022-04-April.ipynb  data-description-2022-04-April.py  data-description-all-data-gps-no-dup.ipynb  data-description-all-data-gps-ring-road.ipynb  data-description-all-data-gps.ipynb  data-quality-check.ipynb  fast-movement-anomali-detection-ring-road.ipynb  fast-movement-anomali-detection.ipynb  folium-test.ipynb  main.py  memahami_mobility_data.md  only-around-ring-road-utara.ipynb  parquet-file-check.ipynb  parquet-info-2022-04-April.ipynb  peta_osmnx_DIY.html  pyproject.toml  shared.py  skripsi.md  tes.py
.ipynb_checkpoints/: fix-ring-road-utara-map-checkpoint.ipynb
.qwen/: settings.json
ODanalysisOfRRU/: 1-buffer-of-rru.ipynb  2-anomali-detection.ipynb  shared.py
analisis1/: LAPORAN.md  analisis.py  hasil_analisis_summary.csv  plot.py
analisis10/: LAPORAN.md  analisis.py  hasil_entropy_summary.csv  run_log.txt
analisis11/: LAPORAN.md  analisis.py  hasil_daypart_summary.csv  run_log.txt
analisis12/: LAPORAN.md  analisis.py  hasil_hotspot_persistence_summary.csv  run_log.txt
analisis2/: LAPORAN.md  analisis.py  hasil_temporal_summary.csv
analisis3/: LAPORAN.md  analisis.py  hasil_hotspot_summary.csv  run_log.txt
analisis4/: LAPORAN.md  analisis.py  hasil_od_summary.csv  run_log.txt
analisis5/: LAPORAN.md  analisis.py  (+2 more)
(+33 files in other folders)
