[project]
name = "skripsi"
version = "0.1.0"
description = "Analisis spatiotemporal mobilitas GPS DIY (Oktober 2021 - Juni 2022)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "contextily>=1.7.0",
    "duckdb>=1.4.4",
    "folium>=0.20.0",
    "geopandas>=1.1.2",
    "h5py>=3.15.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "polars>=1.38.1",
    "powerlaw>=2.0.0",
    "pyarrow>=23.0.1",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "scikit-mobility>=1.2.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "tqdm>=4.67.3",
]
