[project]
name = "skripsi"
version = "0.1.0"
description = "Analisis spatiotemporal mobilitas GPS DIY (Oktober 2021 - Juni 2022)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "branca>=0.8.0",
    "contextily>=1.7.0",
    "duckdb>=1.4.4",
    "fastparquet>=2026.3.0",
    "fiona>=1.10.1",
    "folium>=0.20.0",
    "geographiclib>=2.1",
    "geopandas>=1.1.2",
    "h5py>=3.15.1",
    "humanize>=4.15.0",
    "jupyter>=1.1.1",
    "jupytext>=1.19.1",
    "leuvenmapmatching>=1.1.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "osmnx>=2.1.0",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "polars>=1.38.1",
    "powerlaw>=2.0.0",
    "pyarrow>=23.0.1",
    "pytz>=2024.1",
    "rich>=14.3.3",
    "rtree>=1.4.1",
    "scikit-learn>=1.8.0",
    "scikit-mobility>=1.2.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "setuptools>=82.0.0",
    "shapely>=2.1.2",
    "streamlit>=1.45.0",
    "streamlit-folium>=0.24.0",
    "thrift>=0.22.0",
    "tqdm>=4.67.3",
    "trackintel>=1.4.2",
]
